-- bstat: report battery status information.
-- Copyright 2014 Nikita Karetnikov <nikita@karetnikov.org>
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU General Public License as published by
-- the Free Software Foundation, either version 3 of the License, or
-- (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU General Public License for more details.
--
-- You should have received a copy of the GNU General Public License
-- along with this program.  If not, see <http://www.gnu.org/licenses/>.

name:                bstat
version:             0.1.0.0
synopsis:            report battery status information
homepage:            https://github.com/nkaretnikov/bstat
license:             GPL-3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable bstat
  main-is:             Bstat.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
